add_library(minico-rpc SHARED
    logger.cc
    context.cc
    coroutine.cc
    epoller.cc
    timer.cc
    mstime.cc
    mutex.cc
    processor.cc
    processor_selector.cc
    socket.cc
    scheduler.cc
    minico_api.cc
    ${PROJECT_SOURCE_DIR}/src/tcp/tcp_client.cc
    ${PROJECT_SOURCE_DIR}/src/tcp/tcp_server.cc
    ${PROJECT_SOURCE_DIR}/src/udp/udp_client.cc
    ${PROJECT_SOURCE_DIR}/src/udp/udp_server.cc
    ${PROJECT_SOURCE_DIR}/src/rpc/rpc_client.cc
    ${PROJECT_SOURCE_DIR}/src/rpc/rpc_client_stub.cc
    ${PROJECT_SOURCE_DIR}/src/rpc/rpc_server.cc
    ${PROJECT_SOURCE_DIR}/src/rpc/rpc_server_stub.cc
    ${PROJECT_SOURCE_DIR}/src/rpc/rpc_header.cc
    )
